# vllm_ocr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bookextract/: __init__.py  artifacts.py  assets.py  canonical.py  cli.py  config.py  context.py  conversion.py  errors.py  failure_persistence.py  fingerprints.py  models.py  output_paths.py  output_publish.py  pdf.py  pipeline.py  run_guard.py  run_lock.py  schema.py  state.py  storage.py  validation.py  wire.py
bookextract/inference/: __init__.py  base.py  bootstrap.py  llamacpp.py
bookextract/interpretation/: __init__.py  base.py  prompts.py  vlm.py
bookextract/rendering/: __init__.py  epub.py  markdown.py  output_bundle.py  publication.py
bookextract/resources/: pandoc-epub-v1.json
docs/plans/: implementation_plan_v0.1.md  lean_local_vlm_book_extraction_plan.md
schemas/: vlm-page-response-v1.json
scripts/: installed_wheel_smoke.py
tests/: conftest.py  test_apply_template_tokenize.py  test_artifacts.py  test_canonical.py  test_cli_workflow.py  test_epub_render.py  test_figure_assets.py  test_inference_contracts.py  test_inference_retry.py  test_integration_m0.py  test_markdown_footnotes.py  test_output_publish.py  test_pdf_coordinates.py  test_pipeline_noop.py  test_props_preflight.py  test_publication_merge.py  test_run_guard.py  test_run_lock.py  test_schema.py  test_state_replay.py  test_storage.py  test_thinking_calibration.py  test_validation.py  test_wire_conversion.py
tests/fixtures/: llama_props_no_modalities.json  llama_props_vision.json  llama_props_vision_false.json
