[project]
name = "bookextract"
version = "0.1.0"
description = "Local-first VLM book extraction to Markdown/EPUB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.4",
]

[project.scripts]
bookextract = "bookextract.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bookextract"]

[tool.hatch.build.targets.sdist]
include = [
    "/bookextract",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live llama-server contract tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
packages = ["bookextract"]

[[tool.mypy.overrides]]
module = ["fitz.*"]
ignore_missing_imports = true
